--- a/src/components/hud/css/hud.css
+++ b/src/components/hud/css/hud.css
@@ -1,3 +1,6 @@
+/* body {
+    background-color: brown;
+} */
 .hud-main {
     width: -webkit-fill-available;
     height: -webkit-fill-available;
@@ -5,7 +8,10 @@
     position: absolute;
     z-index: -1;
 }
-
+.hud-position-leftop {
+    margin-right: auto;
+    margin-bottom: auto;
+}
 .hud-position-rightbottom {
     margin-left: auto;
     margin-top: auto;
