--- a/src/css/base.css
+++ b/src/css/base.css
@@ -62,5 +62,6 @@ img { pointer-events: none; }
 .box{
 	width: -webkit-fill-available;
   height: -webkit-fill-available;
+  display: flex;
   position: absolute;
 }
