--- a/src/components/hud/css/hud.css
+++ b/src/components/hud/css/hud.css
@@ -2,15 +2,16 @@
     background-color: brown;
 } */
 .hud-main {
-    width: -webkit-fill-available;
-    height: -webkit-fill-available;
+    width: 100%;
+    height: 100%;
     display: flex;
     position: absolute;
-    z-index: -1;
+    /* z-index: -1; */
 }
 .hud-position-leftop {
     margin-right: auto;
     margin-bottom: auto;
+    position: absolute;
 }
 .hud-position-rightbottom {
     margin-left: auto;
