--- a/src/components/hud/css/main.css
+++ b/src/components/hud/css/main.css
@@ -1,3 +1,89 @@
-
-
-*,body,html{padding:0;margin:0}#chat,a,body,html{color:#fff}body,html{-webkit-font-smoothing:antialiased;overflow:hidden;font-size:14px;-webkit-user-select:none}a{text-decoration:none}.ui_element{display:none;position:absolute;width:100vw;height:100vh;z-index:2}#chat{display:block;z-index:0;line-height:26px;font-weight:700;text-shadow:1px 1px 0 #333,-1px -1px 0 #333,1px -1px 0 #333,-1px 1px 0 #333,1px 1px 0 #333;font-family:"Century Gothic",serif;font-size:13px;letter-spacing:.4px;margin-left:0px}@media screen and (min-height:1080px){#chat{font-size:18px!important;font-weight:700}}#chat ul#chat_messages{overflow-y:hidden;transition: 0.3s;height:278px;margin-top:2vh;transform:rotate(180deg);width:28vw;padding:10px 20px;list-style-type:none}#chat ul#chat_messages>li{transform:rotate(-180deg)}#chat input#chat_msg{color:#fff;background:rgba(0,0,0,.5);outline:0;border:none;font-family:Myriad Pro,Open Sans,sans-serif;font-size:13px;line-height:35px;width:calc(30vw + 2px);padding:5px 5px 5px 15px}::-webkit-scrollbar{width:15px}::-webkit-scrollbar-thumb{background:rgba(0,0,0,.3);border-radius:25px}::-webkit-scrollbar-thumb:hover{background:#555}
+*,body,html
+{
+	margin: 0;
+	padding: 0;
+}
+#chat,a,body,html
+{
+	color: #fff;
+}
+body,html
+{
+	font-size: 14px;
+	overflow: hidden;
+	webkit-font-smoothing: antialiased;
+	webkit-user-select: none;
+}
+a
+{
+	text-decoration: none;
+}
+.ui_element
+{
+	display: none;
+	/* height: 100vh; */
+	position: absolute;
+	/* width: 100vw; */
+	/* z-index: 2; */
+}
+#chat
+{
+	display: block;
+	font-family: "Century Gothic",serif;
+	font-size: 13px;
+	font-weight: 700;
+	letter-spacing: .4px;
+	line-height: 26px;
+	margin-left: 0px;
+	text-shadow: 1px 1px 0 #333,-1px -1px 0 #333,1px -1px 0 #333,-1px 1px 0 #333,1px 1px 0 #333;
+	z-index: 0;
+}
+@media screen and (min-height:1080px)
+{
+	#chat
+	{
+		font-size: 18px!important;
+		font-weight: 700;
+	}
+}
+#chat ul#chat_messages
+{
+	height: 278px;
+	list-style-type: none;
+	margin-top: 2vh;
+	overflow-y: hidden;
+	padding: 10px 20px;
+	transform: rotate(180deg);
+	transition: 0.3s;
+    width: 28vw;
+    overflow: scroll;
+}
+#chat ul#chat_messages>li
+{
+	transform: rotate(-180deg);
+}
+#chat input#chat_msg
+{
+	background: rgba(0,0,0,.5);
+	border: none;
+	color: #fff;
+	font-family: Myriad Pro,Open Sans,sans-serif;
+	font-size: 13px;
+	line-height: 35px;
+	outline: 0;
+	padding: 5px 5px 5px 15px;
+	width: calc(30vw + 2px);
+}
+.ui_element::-webkit-scrollbar
+{
+	width: 15px;
+}
+.ui_element::-webkit-scrollbar-thumb
+{
+	background: rgba(0,0,0,.3);
+	border-radius: 25px;
+}
+.ui_element::-webkit-scrollbar-thumb:hover
+{
+	background: #555;
+}
