--- a/src/components/phone/css/phone.css
+++ b/src/components/phone/css/phone.css
@@ -1272,6 +1272,7 @@ figure {
     width: 100%;
     height: 224.5px;
     margin: 0;
+    margin-top: 17px;
     position: absolute;
 }
 
@@ -1285,6 +1286,7 @@ figure img {
     z-index: 1;
     margin-left: auto;
     width: 100%;
+    height: 60px;
     justify-content: flex-end;
     display: flex;
     align-items: center;
@@ -1313,7 +1315,7 @@ figure img {
 }
 
 .p-nameplayer-p {
-    margin-top: -42px;
+    margin-top: -64px;
     margin-left: 12px;
     font-family: "Roboto";
     font-style: normal;
@@ -1337,6 +1339,7 @@ figure img {
     display: flex;
     align-items: center;
     flex-direction: column;
+    z-index: 1;
 }
 
 .rotate-components .p-box-mob_email {
@@ -2009,19 +2012,21 @@ BankCard
     /* min-height: 20px; */
     font-family: "Roboto"; /* либо "SF Compact Display Medium"*/
     font-size: 14px;
-    display: flex;
     margin-bottom: 4px;
     position: relative;
+    display: block;
 }
 
 .testmes {
+    width: fit-content;
     min-height: 20px;
     padding-left: 6px;
     padding-top: 8px;
-    display: flex;
+    /*display: flex;*/
     flex-direction: row;
     position: relative;
     box-sizing: border-box;
+    display: flex;
 }
 
 .block-sms-ded {
