--- a/src/components/editorplayer/css/editorplayer.css
+++ b/src/components/editorplayer/css/editorplayer.css
@@ -624,3 +624,12 @@ input.auth-input-style:focus::-webkit-input-placeholder {
     height: 271px;
     margin-top: 22px;
 }
+.text-role-recomed {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Roboto';
+    font-size: 48px;
+}
