--- a/src/components/walkietalkie/css/radioset.css
+++ b/src/components/walkietalkie/css/radioset.css
@@ -9,9 +9,11 @@
     display: none !important;
 } */
 .adaptive {
-    width: 100%;
-    height: 100%;
     position: absolute;
+    z-index: 1;
+    right: 4%;
+    bottom: -2%;
+    z-index: 10;
     /*background: url(../img/image14.png) no-repeat;*/
 }
 
@@ -24,13 +26,7 @@
     align-items: center;
 }
 
-.adaptive.position {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    padding-right: 457px;
-    padding-bottom: 26px;
-}
+
 
 .position-window {
     width: inherit;
@@ -311,17 +307,23 @@ p.button-small-text {
 .num-wave-first {
     width: 68px;
     text-align: end;
+    border-bottom: 1px solid transparent;
+    height: 36px;
 }
 
 .num-wave-last {
     width: 68px;
     text-align: start;
+    height: 36px;
+    border-bottom: 1px solid transparent;
 }
 
 .num-wave-post {
     display: flex;
 }
-
+.num-wave-post:first-child {
+    margin-bottom: 1px;
+}
 .position-text-screen {
     width: 200px;
     height: 142px;
@@ -330,7 +332,7 @@ p.button-small-text {
     align-items: center;
     border-radius: 5px;
     flex-direction: column;
-    background: rgba(233, 135, 46, 0.9);
+    /* background: rgba(233, 135, 46, 0.9); */
 }
 
 .position-mode {
@@ -413,7 +415,7 @@ p.button-small-text {
 }
 
 .icons-email {
-    background: url(../img/email.svg) no-repeat;
+    /* background: url(../img/email.svg) no-repeat; */
     width: 12px;
     height: 10px;
     margin-left: 115px;
@@ -424,4 +426,7 @@ p.button-small-text {
     width: 20px;
     height: 10px;
     margin-left: 26px;
+}
+.w-select-border{
+    border-bottom: 1px dotted #000;
 }
