--- a/src/components/editorplayer/css/editorplayer.css
+++ b/src/components/editorplayer/css/editorplayer.css
@@ -9,7 +9,7 @@
     width: 230px;
     height: 185px;
     background: rgb(28, 28, 28);
-    display: flex;
+    display: none; /*Flex*/
     flex-direction: column;
     margin-left: 11px;
     margin-bottom: 13px;
