--- a/src/components/authorization/css/auto.css
+++ b/src/components/authorization/css/auto.css
@@ -513,4 +513,47 @@ input.reg-input-style:first-child {
     margin-left: auto;
     margin-right: 23px;
 }
-  
+.iframe_rules{
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.iframe_rules #rules {
+    width: 80%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+} 
+.iframe_rules #rules iframe {
+    border: 0px none; 
+    height: 100%; 
+    width: 100%;
+}
+.close-rules {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+}
+.close-img-rules {
+    background: url(../img/close.svg) no-repeat;
+    width: 29px;
+    height: 30px;
+    background-size: cover;
+    margin-left: auto;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.close-img-rules:hover {
+    transform: rotate(90deg);
+    transition: ease-out 0.3s;
+}
+#button_rules:hover{
+    color:#3eb5f1;
+}
