--- a/src/components/inventory/css/inventory.css
+++ b/src/components/inventory/css/inventory.css
@@ -1,6 +1,15 @@
-/* body {
-    background: #352929;
-} */
+body {
+    /*background: #352929;*/
+}
+
+.bgForDrop {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
 .inv-box {
     /* width: -webkit-fill-available;
     height: -webkit-fill-available;
